home.lan -> home; add TFTP/PXE

--- a/etc/dhcpd.conf
+++ b/etc/dhcpd.conf
@@ -1,4 +1,5 @@
-option domain-name "home.lan";
+option domain-name "home";
+server-name "oriole-dhcpd";
 
 subnet 192.168.1.0 netmask 255.255.255.0 {
        option routers 192.168.1.1;
@@ -6,6 +7,10 @@ subnet 192.168.1.0 netmask 255.255.255.0 {
        range 192.168.1.100 192.168.1.228;
 
        default-lease-time 86400;
+
+       # PXE booting
+       filename "pxeboot";
+       next-server 192.168.1.1; # TFTP server (this one)
 
        group {
        	     use-host-decl-names on;
@@ -23,6 +28,11 @@ subnet 192.168.1.0 netmask 255.255.255.0 {
        	     host ps4 {
        	     	  fixed-address 192.168.1.4;
        	    	  hardware ethernet 60:5b:b4:66:b2:91;
+       	     }
+
+       	     host bunny {
+       	     	  fixed-address 192.168.1.5;
+       	    	  hardware ethernet 94:c6:91:1e:bf:66;
        	     }
 
        	     host paulvo {
