--- a/var/unbound.conf
+++ b/var/unbound.conf
@@ -17,7 +17,7 @@ server:
 	private-address: 192.168.0.0/16
     	private-address: 172.16.0.0/12
     	private-address: 10.0.0.0/8
-	private-domain: "home.lan"
+	private-domain: "home"
 
 remote-control:
 	control-enable: yes
@@ -25,7 +25,7 @@ remote-control:
 	control-interface: /var/run/unbound.sock
 
 stub-zone:
-	name: "home.lan"
+	name: "home"
 	stub-addr: 127.0.0.1@5353
 	stub-ssl-upstream: no
 
