--- a/etc/pf.conf
+++ b/etc/pf.conf
@@ -17,11 +17,16 @@ match out on egress inet from !(egress:network) to any nat-to (egress:0)
 table <private> const { 10/8, 172.16/12, 192.168/16 }
 table <badhosts> persist file "/etc/badssh"
 
+# queue with FQ-CoDel as queue manager (combat bufferbloat)
+queue outq on em0 flows 1024 bandwidth 10M max 10M qlimit 1024 default
+queue inq on em1 flows 1024 bandwidth 100M max 100M qlimit 1024 default
+
 # filter rules
 block log all
 antispoof quick for em0
 block quick on egress from { <badhosts>, <private> } to any
 pass out on egress proto { udp, tcp, icmp } from any to any modulate state
+pass out quick on any inet proto udp from 192.168.1.1 to 192.168.1.0/24 # TFTPD
 pass in inet proto icmp all icmp-type $icmp_types
 pass in on $int_if inet proto { tcp udp } all
 pass in on egress inet proto tcp from any to (egress) port $tcp_services
