Fix unbound config

--- a/unbound.conf
+++ b/unbound.conf
@@ -31,12 +31,10 @@ stub-zone:
 
 forward-zone:
     name: "."
-
-    forward-addr: 9.9.9.9         # quad9.net primary
-    forward-addr: 1.1.1.1         # cloudflare primary
-    forward-addr: 149.112.112.112 # quad9.net secondary
-    forward-addr: 1.0.0.1         # cloudflare secondary
-    forward-addr: 8.8.8.8         # google primary
-    forward-addr: 8.8.4.4         # google secondary
-    #forward-ssl-upstream: no
+    forward-addr: 9.9.9.9@853#dns.quad9.net
+    forward-addr: 1.1.1.1@853#one.one.one.one
+    forward-addr: 8.8.8.8@853#dns.google
+    forward-addr: 149.112.112.112@853#dns.quad9.net
+    forward-addr: 1.0.0.1@853#one.one.one.one
+    forward-addr: 8.8.4.4@853#dns.google
     forward-ssl-upstream: yes
