--- a/dhcpd.conf
+++ b/dhcpd.conf
@@ -39,5 +39,10 @@ subnet 192.168.1.0 netmask 255.255.255.0 {
        	     	  fixed-address 192.168.1.90;
 	    	  hardware ethernet 00:16:CB:AE:BE:47;
        	     }
+
+             host pidp11 {
+                fixed-address 192.168.1.7;
+                hardware ethernet b8:27:eb:02:0b:c3;
+             }
        }
 }
