--- a/dhcpd.conf
+++ b/dhcpd.conf
@@ -44,5 +44,10 @@ subnet 192.168.1.0 netmask 255.255.255.0 {
                 fixed-address 192.168.1.7;
                 hardware ethernet b8:27:eb:02:0b:c3;
              }
+
+             host pumpkin {
+                fixed-address 192.168.1.163;
+                hardware ethernet 70:85:c2:8c:42:b5;
+             }
        }
 }
