Improve NAT support for the Switch and give it a static address

--- a/dhcpd.conf
+++ b/dhcpd.conf
@@ -35,15 +35,25 @@ subnet 192.168.1.0 netmask 255.255.255.0 {
        	    	  hardware ethernet 94:c6:91:1e:bf:66;
        	     }
 
-       	     host paulvo {
-       	     	  fixed-address 192.168.1.90;
-	    	  hardware ethernet 00:16:CB:AE:BE:47;
-       	     }
+             # host wg {
+             #   fixed-address 192.168.1.6;
+             #   hardware ethernet ??:??:??:??:??:??;
+             # }
 
              host pidp11 {
                 fixed-address 192.168.1.7;
                 hardware ethernet 74:da:38:2a:e2:aa;
              }
+
+             host switch {
+                 fixed-address 192.168.1.8;
+                 hardware ethernet 64:b5:c6:71:78:8d;
+             }
+
+       	     host paulvo {
+       	     	  fixed-address 192.168.1.90;
+	    	  hardware ethernet 00:16:CB:AE:BE:47;
+       	     }
 
              host pumpkin {
                 fixed-address 192.168.1.163;
