--- a/pf.conf
+++ b/pf.conf
@@ -5,6 +5,7 @@ udp_services = "{ isakmp, ipsec-nat-t }"
 icmp_types = "{ echoreq, unreach }"
 openvpn_port = "1194"
 bunny = "192.168.1.5"
+switch = "192.168.1.8"
 
 # options
 set block-policy drop
@@ -13,7 +14,8 @@ set skip on lo
 
 # match rules
 match in all scrub (no-df random-id max-mss 1440)
-match out on egress inet from !(egress:network) to any nat-to (egress:0)
+match out on egress inet from !$switch to any nat-to (egress:0) port 1024:65535
+match out on egress inet from  $switch to any nat-to (egress:0) static-port
 
 # tables
 table <martians> { 0.0.0.0/8 10.0.0.0/8 127.0.0.0/8 169.254.0.0/16     \
